--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -7,7 +7,7 @@
   <div class="overview">
     <div class="paragraph-gap-2">
       <span class="title">Overview</span>
-      <span>
+      <span class="text">
         Pharm Yarok sells medicinal cannabis mostly through phone and WhatsApp.
         <br />
         Their app is outdated and inefficient. <br />
@@ -16,7 +16,7 @@
     </div>
     <div class="paragraph-gap-2">
       <span class="title">The challenge</span>
-      <span>
+      <span class="text">
         Redesign the app to improve usability, make ordering easier and
         convenient for future purchases, <br />
         to encourage users to purchase on the app.
@@ -27,38 +27,40 @@
   <div class="user-story">
     <div class="paragraph-gap-2">
       <img src="../../assets/pharmYarok/userStory1.svg" />
-      <span
+      <span class="text"
         >Avi is texting with the pharmacy's reps to get info on strains to
         buy.</span
       >
     </div>
     <div class="paragraph-gap-2">
       <img src="../../assets/pharmYarok/userStory2.svg" />
-      <span
+      <span class="text"
         >Avi is disappointed by the lack of info, recommendations, and images.
       </span>
     </div>
     <div class="paragraph-gap-2">
       <img src="../../assets/pharmYarok/userStory3.svg" />
-      <span>Avi decides to search strains on the app.</span>
+      <span class="text">Avi decides to search strains on the app.</span>
     </div>
     <div class="paragraph-gap-2">
       <img src="../../assets/pharmYarok/userStory4.svg" />
-      <span
+      <span class="text"
         >Avi quickly finds the info and images he needed and places an
         order.</span
       >
     </div>
     <div class="paragraph-gap-2">
       <img src="../../assets/pharmYarok/userStory5.svg" />
-      <span>Avi got the order, and he's relieved to have his medicine.</span>
+      <span class="text"
+        >Avi got the order, and he's relieved to have his medicine.</span
+      >
     </div>
   </div>
 
   <div class="research">
     <div class="paragraph">
       <span class="title">Research</span>
-      <span>
+      <span class="text">
         I began the project by benchmarking similar apps to understand the
         features that users expect and identify areas for improvement. <br />
         I then conducted user interviews to understand how people pick their
@@ -73,7 +75,7 @@
             <span class="text-bold"
               >What helps decide which cannabis strain to buy?</span
             >
-            <span class="answer filler"
+            <span class="answer"
               >Knowing which cannabis strain is right for a specific <br />
               condition, and following the majority's choice.</span
             >
@@ -109,8 +111,8 @@
         <span class="card">
           <span class="chip-title-red">Problem</span>
           <span class="content">
-            <span class="text-bold">Limited search:</span> The only supported
-            way of searching is by brand.
+            <span class="text-bold">Limited search:</span>The only supported way
+            of searching is by brand.
           </span>
         </span>
         <span class="card">
@@ -149,12 +151,12 @@
       </span>
       <div class="personas">
         <div class="persona">
-          <img src="../../assets/pharmYarok/person1.svg" />
+          <div><img src="../../assets/pharmYarok/person1.svg" /></div>
           <div class="person-info">
             <span class="person">Leisure buyer</span>
             <span>
-              They smoke for fun, and like trying popular strains with high THC
-              levels.
+              They smoke for fun, and like trying <br />popular strains with
+              high THC levels.
             </span>
             <span
               ><span class="bold">Needs & expectations:</span> <br />Fast
@@ -162,6 +164,7 @@
             </span>
             <span
               ><span class="bold">Goals:</span> being among the firsts to try
+              <br />
               new strains.
             </span>
             <span
@@ -171,12 +174,12 @@
           </div>
         </div>
         <div class="persona">
-          <img src="../../assets/pharmYarok/person2.svg" />
+          <div><img src="../../assets/pharmYarok/person2.svg" /></div>
           <div class="person-info">
             <span class="person">Carrier</span>
             <span>
-              The carrier handles someone else's orders, since they're not able
-              to.
+              The carrier handles someone else's <br />
+              orders, since they're not able to.
             </span>
             <span>
               <span class="bold">Needs & expectations:</span> making the
@@ -184,21 +187,23 @@
             </span>
             <span
               ><span class="bold">Goals:</span> having the same strains to keep
+              <br />
               a therapeutic sequence.
             </span>
             <span
               ><span class="bold">Frustrations:</span> when the usual order is
+              <br />
               out of stock.
             </span>
           </div>
         </div>
         <div class="persona">
-          <img src="../../assets/pharmYarok/person3.svg" />
+          <div><img src="../../assets/pharmYarok/person3.svg" /></div>
           <div class="person-info">
             <span class="person">Outlet buyer</span>
             <span>
-              They're patients for many years, and usually reorder the same
-              strains.
+              They're patients for many years, and <br />
+              usually reorder the same strains.
             </span>
             <span
               ><span class="bold">Needs & expectations:</span> <br />Getting
@@ -210,6 +215,7 @@
             >
             <span
               ><span class="bold">Frustrations:</span> there's no variety of
+              <br />
               discounted strains.
             </span>
           </div>
@@ -221,7 +227,7 @@
   <div class="section">
     <div class="paragraph-gap-2">
       <span class="title">The solution</span>
-      <span>
+      <span class="text">
         The revamped app simplifies medicinal cannabis ordering by providing
         patients with insightful treatment decisions <br />
         and facilitating quick, effortless ordering.
@@ -235,7 +241,7 @@
         <span class="sub-title">Wireframes</span>
         <span class="title"> The search page </span>
       </div>
-      <span>
+      <span class="text">
         To help users find the strains they're looking for easily, I categorized
         the products according to the most common factors that <br />patients
         consider when choosing a strain: dose, newness, brand, popularity, and
@@ -249,7 +255,14 @@
       </div>
       <img src="../../assets/icons/right-arrow.svg" />
       <div class="image">
-        <img src="../../assets/pharmYarok/wireframe-new.svg" />
+        <div>
+          <div class="scroll-image">
+            <img class="frame" src="../../assets/pharmYarok/wireframe.svg" />
+            <div class="content">
+              <img src="../../assets/pharmYarok/wireframe-new.svg" />
+            </div>
+          </div>
+        </div>
         <span>New</span>
       </div>
     </div>
@@ -262,84 +275,102 @@
         <span class="title">Adding products to the cart</span>
       </div>
       <div class="paragraph-gap-3">
-        <span class="problem text-bold">The problems I addressed were:</span>
-        <span class="para">
-          <span>
-            <span class="text-bold">Missing cart:</span> Unclear what's added
-            after the products page.
+        <div class="paragraph-gap-2">
+          <span class="problem text-bold">The problems I addressed were:</span>
+          <span class="para">
+            <span class="paragraph-gap-1">
+              <span class="text-bold">Missing cart:</span> Unclear what's added
+              after the products page.
+            </span>
+            <span class="paragraph-gap-1">
+              <span class="text-bold">Lack of images:</span> Patients want to
+              see what they're buying.
+            </span>
           </span>
-          <span>
-            <span class="text-bold">Lack of images:</span> Patients want to see
-            what they're buying.
+        </div>
+        <div class="paragraph-gap-2">
+          <span class="solution text-bold">The solutions:</span>
+          <span class="para">
+            <span class="paragraph-gap-1">
+              <span class="text-bold">Adding a cart:</span> to provide clarity &
+              allow users to leave <br />the process and return later without
+              interruption.<br />
+            </span>
+            <span class="paragraph-gap-1">
+              <span class="text-bold">
+                Making POP products more accessible:
+              </span>
+              I added a POP products section to the cart with <br />images and
+              descriptions to boost sales.
+            </span>
           </span>
-        </span>
-        <span class="solution text-bold">The solutions:</span>
-        <span class="para">
-          <span>
-            <span class="text-bold">Adding a cart</span> to provide clarity &
-            allow users to leave <br />the process and return later without
-            interruption.<br />
-          </span>
-          <span class="paragraph-gap-0">
-            <span class="text-bold"> Making POP products more accessible </span>
-            I added a POP products section to the cart with <br />images and
-            descriptions to boost sales.
-          </span>
-        </span>
+        </div>
       </div>
     </div>
     <div class="images">
-      <img src="../../assets/pharmYarok/final2.svg" />
-      <img src="../../assets/pharmYarok/final1.svg" />
+      <div><img src="../../assets/pharmYarok/final2.svg" /></div>
+      <div><img src="../../assets/pharmYarok/final1.svg" /></div>
     </div>
   </div>
 
   <div class="checkout">
     <span class="title">Checkout process</span>
     <div class="images">
-      <img src="../../assets/pharmYarok/checkout1.svg" />
-      <img src="../../assets/pharmYarok/checkout2.svg" />
-      <img src="../../assets/pharmYarok/checkout3.svg" />
-      <img src="../../assets/pharmYarok/checkout4.svg" />
+      <div><img src="../../assets/pharmYarok/checkout1.svg" /></div>
+      <div><img src="../../assets/pharmYarok/checkout2.svg" /></div>
+      <div>
+        <div class="scroll-image">
+          <img class="frame" src="../../assets/pharmYarok/checkout-frame.svg" />
+          <div class="content">
+            <img src="../../assets/pharmYarok/checkout3.svg" />
+          </div>
+        </div>
+      </div>
+      <div><img src="../../assets/pharmYarok/checkout4.svg" /></div>
     </div>
   </div>
 
   <div class="problem-solutions">
     <div class="images">
-      <img src="../../assets/pharmYarok/order1.svg" />
-      <img src="../../assets/pharmYarok/order2.svg" />
+      <div><img src="../../assets/pharmYarok/order1.svg" /></div>
+      <div><img src="../../assets/pharmYarok/order2.svg" /></div>
     </div>
     <div class="para">
       <span class="title">Order tracking</span>
       <div class="paragraph-gap-3">
-        <span class="problem text-bold">The problem:</span>
-        <span class="para">
-          <span class="text-bold"
-            >Lack of delivery info leading to cancellations:</span
-          >Patients would have to contact the pharmacy to get <br />delivery
-          details, or await contact. most people would <br />get tired waiting
-          and purchase someplace else.
-        </span>
-        <span class="solution text-bold">The solutions:</span>
-        <span class="para">
-          <span class="paragraph-gap-0">
+        <div class="paragraph-gap-2">
+          <span class="problem text-bold">The problems I addressed were:</span>
+          <span class="the-problem">
             <span class="text-bold"
-              >Providing clear feedback & setting expectations:</span
-            >
-            After placing an order, the success page helps inform <br />the
-            patient about the timeline of the order.
+              >Lack of delivery info leading to cancellations:</span
+            >Patients would have to contact the pharmacy to get <br />delivery
+            details, or await contact. most people would <br />get tired waiting
+            and purchase someplace else.
           </span>
-          <span class="paragraph-gap-0">
-            <span class="text-bold">Allocating space for order tracking:</span
-            >After placing an order, the info, status and ETA will be
-            <br />visible at the top of the search page.
+        </div>
+        <div class="paragraph-gap-2">
+          <span class="solution text-bold">The solutions:</span>
+          <span class="para">
+            <span class="paragraph-gap-1">
+              <span class="text-bold"
+                >Providing clear feedback & setting expectations:</span
+              >
+              After placing an order, the success page helps inform <br />the
+              patient about the timeline of the order.
+            </span>
+            <span class="paragraph-gap-1">
+              <span class="text-bold">Allocating space for order tracking:</span
+              >After placing an order, the info, status and ETA will be
+              <br />visible at the top of the search page.
+            </span>
           </span>
-        </span>
+        </div>
       </div>
     </div>
   </div>
 
-  <img class="image" src="../../assets/pharmYarok/overview.svg" />
+  <img class="image" src="../../assets/pharmYarok/overview.png" />
 </div>
 
 <app-footer></app-footer>
+<app-scroll-to-top></app-scroll-to-top>
