--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -15,4 +15,16 @@
   --wireframe-background: #f9f9f9;
   --card-background: #ffffff;
   --gray-color: #8c8b8b;
+
+  --dark-title-color: #e6e6e6;
+  --dark-text-color: #cccccc;
+  --dark-background-first: #232323;
+  --dark-background-second: #373737;
+  --dark-blue: #58afff;
+  --dark-border: #393939;
+  --dark-red: #ff616a;
+  --dark-blue-background: #2c343c;
+  --dark-red-background: #3c2d2e;
+  --dark-card-background: #272727;
+  --dark-green: #2eb891;
 }
