--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -39,6 +39,7 @@
       .sentence {
         @extend .sub-title;
 
+        line-height: 160%;
         color: var(--sub-title-color);
       }
     }
@@ -66,6 +67,10 @@
         }
       }
     }
+
+    * {
+      width: 100%;
+    }
   }
 
   .about {
@@ -73,7 +78,7 @@
     width: -webkit-fill-available;
     background-image: url("../../assets/background.svg");
     background-position: center;
-    gap: 2.75rem;
+    gap: 3.5rem;
     padding: 10.125rem 0;
     justify-content: center;
 
@@ -102,6 +107,10 @@
         .bold {
           font-weight: 600;
         }
+      }
+
+      .content-padding {
+        padding-right: 1.688rem;
       }
     }
   }
