--- a/src/assets/_mixins.scss
+++ b/src/assets/_mixins.scss
@@ -4,12 +4,16 @@
 }
 
 @mixin chip($color) {
+  display: flex;
+  align-items: flex-end;
   width: fit-content;
+  height: 1.75rem;
   color: var($color);
   background: var($color + "-background");
   border-radius: 3.125rem;
-  padding: 0.25rem 0.5rem;
+  padding: 0 0.5rem;
   font-weight: 500;
+  text-transform: capitalize;
 }
 
 @mixin paragraph {
